# C-CXX-template

./: .gitignore  CMakeLists.txt  README.md  README_ch.md
cmake/: messagecolor.cmake  utils.cmake
doc/: README.md
src/: CMakeLists.txt  main.cpp
src/DataBase/: CMakeLists.txt  DataBase.cpp  DataBase.h
src/common/: version.h
